# omnifyproduct

./: .dockerignore  .env.example  .git_commit_message.txt  .gitattributes  .gitignore  .replit  AGENTKIT_IMPLEMENTATION_README.md  AGENTKIT_REVOLUTIONARY_IMPLEMENTATION_COMPLETE.md  AGENTKIT_SDK_STATUS.md  AI_API_COST_ANALYSIS.md  API_KEY_CONFIGURATION.md  ARCHITECTURE_CLARIFICATION.md  ARCHITECTURE_DIAGRAMS.md  BACKEND_TEST_IMPLEMENTATION_REPORT.md  BUSINESS_REQUIREMENTS_DOCUMENT.md  CHANGELOG.md  CODEBASE_GAP_ANALYSIS_AND_ROADMAP.md  COMPREHENSIVE_SUMMARY.md  COMPREHENSIVE_TESTING_ROADMAP.md  COMPREHENSIVE_TEST_REQUIREMENTS.md  DEPLOYMENT_GUIDE.md  EXECUTIVE_SUMMARY_MARKETING_AI.md  FINAL_TESTING_SUMMARY.md  FRONTEND_PORTS_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATED_TESTING_SETUP.md  MARKETING_AI_GAP_ANALYSIS.md  MARKETING_AI_IMPLEMENTATION_ROADMAP.md  MARKETING_SOLUTION_ARCHITECTURE.md  MONGODB_ATLAS_M0_SETUP.md  MVP_options.md  NEXT_TESTING_PRIORITIES.md  PRODUCTION_READINESS.md  PRODUCTION_READINESS_ANALYSIS.md  PRODUCTION_READINESS_ANALYSIS_FINAL.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_ROADMAP.md  PRODUCT_ARCHITECTURE_OVERVIEW.md  PRODUCT_OVERVIEW.md  PRODUCT_REQUIREMENTS_DOCUMENT.md  (+50 more)
.emergent/: emergent.yml
Scripts/: run_comprehensive_tests.py  run_tests.py
backend/: .env.example  .gitignore  Dockerfile  agentkit_server.py  api_documentation.py  requirements.txt  server.py  simple_server.py  start_server.py
docs/: 25_USE_CASES_COMPLETE.md  ADVANCED_ANALYTICS_BI_COMPLETE.md  API_ROUTES_IMPLEMENTATION.md  API_USAGE_GUIDE.md  AUTH_TESTING_GUIDE.md  (+138 more)
(+727 files in other folders)
