[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "black>=25.9.0",
    "boto3>=1.40.58",
    "fastapi>=0.120.0",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "pydantic>=2.12.3",
    "pymongo>=4.15.3",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=7.0.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "sentry-sdk>=2.42.1",
    "slowapi>=0.1.9",
    "structlog>=25.4.0",
    "uvicorn>=0.38.0",
]
